# LR8

Task_1/: CMakeLists  CMakeLists.txt  adddell  adddell.cpp  change  change.cpp  header.h  input.cpp  inputdata  inputdata.cpp  insertsort.cpp  mainmenu.cpp  outputplacess.cpp  search.cpp  sstopinput.cpp  task_1  task_1.cpp
Task_2/: CMakeLists.txt  adddel.cpp  change.cpp  file.txt  header.h  input  input.cpp  inputdata.cpp  main  main.cpp  showdata.cpp  sort.cpp  task.cpp
